added some styling

--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -1,4 +1,5 @@
-$pain-gray: #495867;
+// $pain-gray: #495867;
+$pain-gray: #000;
 $glaucous: #577399;
 $columbia-blue: #bdd5ea;
 $ghost-white: #f7f7ff;
